# result

./: README.md
.github/workflows/: build.yml
include/: result.h
tests/: CMakeLists.txt  tests.cc
